--- a/src/modules/spa/home_page/home_page_component.html
+++ b/src/modules/spa/home_page/home_page_component.html
@@ -1,5 +1,32 @@
-<div class="events-container">
-    <h1>October events</h1>
-    <div class="home-page-main-section row"></div>
-</div>
+<article>
+    <div class="events-container">
+        <h2>Autumn events</h2>
+        <div class="home-page-main-section row"></div>
+    </div>
+    <div id="side-bar">
+        <h4 class="side-bar-title">Next: <span class="side-bar-span">Winter activities</span></h4>
+        <div class="side-bar-slide active" style="background-image: url('https://images.unsplash.com/photo-1604537466158-719b1972feb8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=869&q=80');">
+            <h3 data-tooltip="Romantic lake is waiting for you this december">Rent a boat</h3>
+        </div>
+            <div class="side-bar-slide" style="background-image: url('https://images.unsplash.com/photo-1516706443377-10e1c05a3346?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=868&q=80');">
+            <h3 data-tooltip="Mountains, snow and ski! Is i't is perfect match?">Skiing</h3>
+        </div>
+        <div class="side-bar-slide" style="background-image: url('https://images.unsplash.com/photo-1502368171624-8a9d0ac8db51?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80');">
+            <h3 data-tooltip="Frosty forest, fresh air - connect with nature.">Frosty forest</h3>
+        </div>
+        <div class="side-bar-slide" style="background-image: url('https://images.unsplash.com/photo-1604537372136-89b3dae196e3?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=869&q=80');">
+            <h3 data-tooltip="Amazing bungalows for your winter holidays">Rent bungalow</h3>
+        </div>
+        <div class="side-bar-slide" style="background-image: url('https://images.unsplash.com/photo-1511114000076-c57e85ef6815?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=870&q=80');">
+            <h3 data-tooltip="Waffle Fair will be open from 3 to 14 January, 2022.">Waffles fair</h3>
+        </div>
+        <div class="side-bar-slide" style="background-image: url('https://images.unsplash.com/photo-1576562331281-d09e46af9854?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1032&q=80');">
+            <h3 data-tooltip="Christmas market will be open throughout December.">Christmas fair</h3>
+        </div>
+        <div class="side-bar-slide" style="background-image: url('https://images.unsplash.com/photo-1514849543360-3228a8766079?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=760&q=80');">
+            <h3 data-tooltip="Learn how to create your own christmas toys">Christmas toys</h3>
+        </div>
+    </div>
+
+</article>
 
