--- a/src/modules/spa/user_profile_page/user_page_component.html
+++ b/src/modules/spa/user_profile_page/user_page_component.html
@@ -1,7 +1,17 @@
-<div class="user-p">
-    <h1>My profile</h1>
-    <h2>Name: </h2>
-    <p class="user-p-name"></p>
-    <h2>Email: </h2>
-    <p class="user-p-email"></p>
+<div class="user-profile">
+    <div class="avatar">
+        <div class="choose-avatar">Choose an avatar...</div>
+    </div>
+ <div class="user-info">
+        <h3>My profile</h3>
+        <div class="user-info-container">
+            <h5>Name: </h5>
+            <p class="user-profile-name"></p>
+        </div>
+        <div class="user-info-container">
+            <h5>Email: </h5>
+            <p class="user-profile-email"></p>
+        </div>
+    </div>
+
 </div>
