--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
 
 <footer>
     <ul id="my-contacts"> <p>Developer contacts:</p>
-        <li><a class="footer-bold" href="https://github.com/V-tyna">Github</a></li>
+        <li><a class="footer-bold" href="https://github.com/V-tyna"  target="_blank">Github</a></li>
         <li><span class="footer-bold">&nbsp;Email:</span> boiko.vtyna@gmail.com </li>
     </ul>
 </footer>
